[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/LibreSprite/EnemyColours/EnemyYellow.png" type="Texture" id=2]
[ext_resource path="res://assets/LibreSprite/EnemyColours/EnemyBlue.png" type="Texture" id=3]
[ext_resource path="res://assets/LibreSprite/EnemyColours/EnemyRed.png" type="Texture" id=4]
[ext_resource path="res://assets/LibreSprite/EnemyColours/EnemyNull.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 30 )

[sub_resource type="Animation" id=2]
resource_name = "change_To_Blue"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyBlue:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyNull:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyYellow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyRed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "change_To_Null"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyNull:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyBlue:editor_description")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyYellow:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyRed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "change_To_Red"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyRed:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyYellow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyBlue:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyNull:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyYellow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyBlue:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyRed:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyNull:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 49.7186, 27.9747 )

[sub_resource type="CircleShape2D" id=7]
radius = 28.1273

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 10
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 150, 1000 )
verticalRange = 200

[node name="EnemyNull" type="Sprite" parent="."]
position = Vector2( 0, -52.27 )
scale = Vector2( 3.24208, 3.24208 )
texture = ExtResource( 6 )

[node name="EnemyRed" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -52.2702 )
scale = Vector2( 3.24208, 3.24208 )
texture = ExtResource( 4 )

[node name="EnemyYellow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -52.2702 )
scale = Vector2( 3.24208, 3.24208 )
texture = ExtResource( 2 )

[node name="EnemyBlue" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -52.27 )
scale = Vector2( 3.24208, 3.24208 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -10 )
rect = Rect2( -50, -50, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( 0, -67.1149 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0, 0.180392, 1, 1 )
position = Vector2( 0, -35.601 )
scale = Vector2( 1.051, 1.02 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/change_To_Blue = SubResource( 2 )
anims/change_To_Null = SubResource( 3 )
anims/change_To_Red = SubResource( 4 )
anims/change_To_Yellow = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
modulate = Color( 0.337255, 1, 0, 1 )
position = Vector2( 0, -28.2437 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -0.396824 )
scale = Vector2( 0.947, 0.722 )
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -26.2629, -32.3445 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 25.8995, -32.3445 )
shape = SubResource( 7 )

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
